finished up the styling and fixed the overflow issue on the flashcards

--- a/src/demo/demo-components/DemoFlashcard/DemoFlashcard.css
+++ b/src/demo/demo-components/DemoFlashcard/DemoFlashcard.css
@@ -3,37 +3,48 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: auto;
   border-radius: 1vmin;
   box-shadow: none;
-
+  height: auto;
+  overflow: hidden;
+  margin: auto;
 }
 
 .flashcard-front,
 .flashcard-back {
   padding: 1rem;
   width: 100%;
-  height: 18vmin;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 5vmin;
+  font-size: 4vmin;
   border-radius: 1vmin;
   border: none;
+}
+
+.flashcard-back {
+  border-top: 0.5px solid var(--dark);
+  border-radius: 0;
+}
+
+.flashcard-front {
+  margin-bottom: -20px;
 }
 
 .flashcard-front .pinyin,
 .flashcard-back .pinyin {
   font-size: 2vmin;
+  margin: auto;
 }
 
 .flashcard-btns {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2vmin 0;
+  margin: 0;
   gap: 2vmin;
 }
 
@@ -48,9 +59,15 @@
 }
 
 .correct-btn {
-  border: 2px solid var(--primary);
+  border: 2px solid var(--action);
   color: var(--darkest);
-  background-color: var(--primary);
+  background-color: var(--action);
+  color: var(--white);
+}
+
+.correct-btn:hover {
+  border: 2px solid var(--medium);
+  background-color: var(--medium);
 }
 
 .incorrect-btn {
@@ -59,7 +76,6 @@
   background-color: var(--red-brick-transparent);
 }
 
-.correct-btn:hover,
 .incorrect-btn:hover {
   background-color: white;
 }
@@ -74,17 +90,8 @@
   align-items: center;
 }
 
-.flip-button {
-  margin-top: 1rem;
-  padding: 8px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  
-}
-
-hr {
-  border: 0;
-  height: 3px;
-  background-color: black;
-  margin-top: -20px;
+.flash-zh {
+  color: var(--darkest);
+  font-weight: bold;
+  font-size: 50px;
 }
